--- a/curriculo.html
+++ b/curriculo.html
@@ -45,10 +45,10 @@
                 </ul>
             <h2 class="apresentacao_conteudo_titulo">Estudos</h2>
                 <ul class="apresentacao_conteudo_texto">
-                    <li>FAM - Gestão da Tecnologia da Informação - (2021 - 2023) - 4º Semestre </li>
-                    <li>Alura - Fullstack Developer - (2022 - 2023) </li>
-                    <li>Alura - Redes de Computadores - (2022 - 2023) </li>
-                    <li>Alura - Gestão e Inovação - (2022 - 2023) </li>                  
+                    <li>FAM - Gestão da Tecnologia da Informação - (2021 - 2023) - 4º Semestre </li><br>
+                    <li>Alura - Fullstack Developer - (2022 - 2023) </li><br>
+                    <li>Alura - Redes de Computadores - (2022 - 2023) </li><br>
+                    <li>Alura - Gestão e Inovação - (2022 - 2023) </li><br>                  
                 </ul>    
         </section>
         <img src="./assets/imagem.png" alt="Foto Bruno Bevilacqua Programando">
