--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="apresentacao_conteudo_titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong> </h1>
-            <p class="apresentacao_conteudo_texto"> Olá! Sou Bruno Bevilacqua, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao_conteudo_texto"> Olá! Sou Bruno Bevilacqua, analista de sistemas e tenho uma empresa de consultoria e serviços de ti. Atualmente estou estudando para ser desenvolvedor fullstack e no momento estou aprendendo as tecnologias React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao_links">
                 <h2 class="apresentacao_links_subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao_botao" href="https://github.com/bbevilacqu4">
